docker-compose/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -c
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/timesheetapp-default: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: Password123!
            - name: MYSQL_TCP_PORT
              value: "3306"
          image: mysql:5.7
          name: db
          args:
            - "--ignore-db-dir=lost+found"
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: datafiles
      # restartPolicy: Always
      volumes:
        - name: datafiles
          persistentVolumeClaim:
            claimName: datafiles
status: {}
