docker-compose/templates/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -c
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/timesheetapp-default: "true"
        io.kompose.service: webapp
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: DBHOST
              value: db
            - name: DBNAME
              value: bingo-db
            - name: DBPASSWORD
              value: Password123!
            - name: DBPORT
              value: "3306"
          image: sbredenhof/timesheettest
          name: webapp
          ports:
            - containerPort: 80
          resources: {}
      # restartPolicy: Always
status: {}
