docker-compose/templates/timesheetapp-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: timesheetapp-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/timesheetapp-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/timesheetapp-default: "true"
